--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -397,13 +397,188 @@
    "outputs": [],
    "source": [
     "# turning off browser while not using to scrap data\n",
-    "browser.quit() "
+    "# browser.quit() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3ab4dd22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# insert it into a function. call it mars_news\n",
+    "def mars_news():\n",
+    "\n",
+    "   # Visit the mars nasa news site\n",
+    "   url = 'https://redplanetscience.com/'\n",
+    "   browser.visit(url)\n",
+    "\n",
+    "   # Optional delay for loading the page\n",
+    "   browser.is_element_present_by_css('div.list_text', wait_time=1)\n",
+    "\n",
+    "   # Convert the browser html to a soup object and then quit the browser\n",
+    "   html = browser.html\n",
+    "   news_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "   slide_elem = news_soup.select_one('div.list_text')\n",
+    "\n",
+    "   # Use the parent element to find the first <a> tag and save it as `news_title`\n",
+    "   news_title = slide_elem.find('div', class_='content_title').get_text()\n",
+    "\n",
+    "   # Use the parent element to find the paragraph text\n",
+    "   news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "\n",
+    "   return news_title, news_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d8d6c103",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mars_news(browser):\n",
+    "\n",
+    "    # Scrape Mars News\n",
+    "    # Visit the mars nasa news site\n",
+    "    url = 'https://redplanetscience.com/'\n",
+    "    browser.visit(url)\n",
+    "\n",
+    "    # Optional delay for loading the page\n",
+    "    browser.is_element_present_by_css('div.list_text', wait_time=1)\n",
+    "\n",
+    "    # Convert the browser html to a soup object and then quit the browser\n",
+    "    html = browser.html\n",
+    "    news_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        slide_elem = news_soup.select_one('div.list_text')\n",
+    "        # Use the parent element to find the first 'a' tag and save it as 'news_title'\n",
+    "        news_title = slide_elem.find('div', class_='content_title').get_text()\n",
+    "        # Use the parent element to find the paragraph text\n",
+    "        news_p = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
+    "\n",
+    "    except AttributeError:\n",
+    "        return None, None\n",
+    "\n",
+    "    return news_title, news_p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32082a9a",
+   "metadata": {},
+   "source": [
+    "# Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7e09436a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def featured_image(browser):\n",
+    "    # Visit URL\n",
+    "    url = 'https://spaceimages-mars.com'\n",
+    "    browser.visit(url)\n",
+    "\n",
+    "    # Find and click the full image button\n",
+    "    full_image_elem = browser.find_by_tag('button')[1]\n",
+    "    full_image_elem.click()\n",
+    "\n",
+    "    # Parse the resulting html with soup\n",
+    "    html = browser.html\n",
+    "    img_soup = soup(html, 'html.parser')\n",
+    "\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        # Find the relative image url\n",
+    "        img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
+    "\n",
+    "    except AttributeError:\n",
+    "        return None\n",
+    "\n",
+    "    # Use the base url to create an absolute url\n",
+    "    img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
+    "\n",
+    "    return img_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1d22c19",
+   "metadata": {},
+   "source": [
+    "# Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0cd35b05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mars_facts():\n",
+    "    # Add try/except for error handling\n",
+    "    try:\n",
+    "        # Use 'read_html' to scrape the facts table into a dataframe\n",
+    "        df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "\n",
+    "    except BaseException:\n",
+    "        return None\n",
+    "\n",
+    "    # Assign columns and set index of dataframe\n",
+    "    df.columns=['Description', 'Mars', 'Earth']\n",
+    "    df.set_index('Description', inplace=True)\n",
+    "\n",
+    "    # Convert dataframe into HTML format, add bootstrap\n",
+    "    return df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8531eba2",
+   "metadata": {},
+   "source": [
+    "# Integrate MongoDB Into the Web App"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f8649b8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize the browser.\n",
+    "# Create a data dictionary.\n",
+    "# End the WebDriver and return the scraped data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cb5307c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define this function as \"scrape_all\" and then initiate the browser\n",
+    "def scrape_all():\n",
+    "    # Initiate headless driver for deployment\n",
+    "    executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "    browser = Browser('chrome', **executable_path, headless=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab4dd22",
+   "id": "5901a0d9",
    "metadata": {},
    "outputs": [],
    "source": []
